--- a/public/dummypost.css
+++ b/public/dummypost.css
@@ -1,7 +1,6 @@
 .rcorner1 {
     /* /* margin: 50px; */
-    border-radius: 25px;
-    border: 1px solid black;
+    border-radius: 12px;
     /* padding: 20px;
     padding-bottom: 50px;
     height: 20px; */
@@ -10,8 +9,7 @@
 
 .rcorner2 {
     /* /* margin: 50px; */
-    border-radius: 25px;
-    border: 1px solid black;
+    border-radius: 12px;
     /* padding: 20px;
     padding-bottom: 50px;
     height: 20px; */
@@ -20,8 +18,7 @@
 
 .rcorner3 {
     /* /* margin: 50px; */
-    border-radius: 25px;
-    border: 1px solid black;
+    border-radius: 12px;
     /* padding: 20px;
     padding-bottom: 50px;*/
     width: 115px;
@@ -33,3 +30,19 @@
     padding: 50px;
     margin-top: 20px;
 }
+
+.corner {
+    background-color: white;
+    text-align: center;
+}
+
+/* .regular-checkbox {
+    width:50px;
+	background-color: #fafafa;
+	border: 1px solid #cacece;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 9px;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
+} */
