--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,11 @@ body {
     background-color: #6DB4D9;
 }
 
+#saveur {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
 .avail {
     width: 50px; 
     position:absolute;
