--- a/public/style.css
+++ b/public/style.css
@@ -3,39 +3,93 @@ body {
 }
 
 .avail {
-    width: 50px; 
-    position:absolute;
-    top:10px;
-    left:10px;
-    z-index:1;
+    width: 50px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1;
 }
 
 .teacher-pic {
-    width: 150px; 
+    width: 150px;
     position: relative;
-    top:0;
-    left:0;
-    z-index:0;
+    top: 0;
+    left: 0;
+    z-index: 0;
 }
 
 .notebook {
-    width: 300px; 
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    width: 300px;
 }
 
-.laptop {
-    box-sizing: border-box;
+
+/* #laptopRight{
+    margin-left: 30px; 
+    z-index:0;
+    position: relative;
+} */
+
+#LaptopRightImage {
+    position: absolute;
+    left: 50;
+    top: 0;
 }
 
-#laptopLeft{
+.textOmer {
+    z-index: 1;
+    position: absolute;
+    top: 40px;
+    left: 175;
+    width: 100%;
+}
+
+
+/* #laptopCenter{
+    margin-left: 30px; 
+    z-index:0;
+    position: relative;
+} */
+
+#LaptopCenterImage {
+    position: relative;
+    left: 30px;
+    top: 0px;
+}
+
+.textHadas {
+    z-index: 100;
+    position: absolute;
+    left: 160px;
+    top: 40px;
+}
+
+
+/* #laptopLeft {
     margin-right: 70px;
     margin-left: -80px;
+    position: relative;
+  } */
+
+#LaptopLeftImage {
+    position: absolute;
+    left: -50;
+    top: 0;
 }
 
-#laptopRight{
-    margin-left: 30px; 
+#textBrandon {
+    z-index: 100;
+    position: absolute;
+    left: 50px;
+    top: 40px;
+}
+
+.textMonitor {
+    font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+    font-size: 30px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 26.4px;
 }
 
 .portraits {
@@ -55,12 +109,14 @@ body {
     border: none;
     border-radius: 50%;
     box-shadow: 0 8px #6C7886;
-  }
-  
-  .button:hover {background-color: #3e8e41}
-  
-  .button:active {
+}
+
+.button:hover {
+    background-color: #3e8e41
+}
+
+.button:active {
     background-color: #3e8e41;
     box-shadow: 0 8px #3C3B41;
     transform: translateY(3px);
-  }
+}
