--- a/public/style.css
+++ b/public/style.css
@@ -151,6 +151,16 @@ h1 {
     color: black;
 }
 
+.btn {
+	font-family: "Patrick Hand";
+	font-size: 20px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+    line-height: 26.4px;
+    color: black;
+}
+
 .corner {
 	font-family: "Patrick Hand";
 	font-size: 20px;
