--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@ body {
     font-size: 16px;
     line-height: 1.42;
     border-radius: 15px;
-    background-color: greenyellow !important;
+    background-color: greenyellow;
     border: none;
     position: absolute;
     top: 290px;
