--- a/public/dummypost.css
+++ b/public/dummypost.css
@@ -36,7 +36,7 @@
     text-align: center;
 }
 
-/* .regular-checkbox {
+.regular-checkbox {
     width:50px;
 	background-color: #fafafa;
 	border: 1px solid #cacece;
@@ -45,4 +45,4 @@
 	border-radius: 3px;
 	display: inline-block;
 	position: relative;
-} */
+} 
